# hybrid_vector_search

./: .gitignore  CMakeLists.txt  README.md  build.sh  pytest.ini  requirements-dev.txt  requirements.txt
docker/: Dockerfile.api  docker-compose.yml
include/: brute_force.hpp  hnsw.hpp
scripts/: benchmark.py  generate_sample_eval_data.py  load_msmarco.py
src/: __init__.py
src/api/: __init__.py  embedder.py  index_manager.py  main.py  store.py
src/core/: benchmark.cpp  bindings.cpp
src/evaluation/: __init__.py  evaluate.py
src/ingestion/: __init__.py  worker.py
src/ui/: __init__.py  streamlit_app.py
tests/: test_api.py  test_hnsw.cpp
